-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.0-beta1
-
None
-
-
0a8d675c668e9c3820a5cd6b307766edce098782 (qt-creator/qt-creator/4.12)
Steps to reproduce:
- open QC with clean settings
- Tools -> Options -> Devices
This presents you a modal dialog regarding setting up sdk and so on although I'm not even on the Android tab nor having a Qt for Android installed.
If you really want to display a modal dialog (which is not the way to go if you ask me..) then please limit this to: explicitly opening the Android tab of the Devices section and having a Qt for Android configured inside QC.
Most preferable would be to integrate this into the Android tab.